1、jsbridge  2、notification  3、两个特殊权限的申请：悬浮窗和修改系统设置

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,18 @@
         android:layout_height="wrap_content"
         android:onClick="unbindRemoteService"
         android:text="unbind_remote_service" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="jsBridge"
+        android:text="百度" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="notify"
+        android:text="通知栏" />
+
+
 </LinearLayout>
