socket通信，有点失败

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="provider进程间通讯示例" />
+
+    <Button
+        android:id="@+id/btn_socket_ipc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="socket通信" />
     <!--<TextView-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="wrap_content"-->
